<resources>
    <string name="app_name">SeniorTracker</string>
    <string name="welcome_home_title">Welcome to SeniorTracker</string>
    <string name="welcome_home_subtitle">Keep your loved ones Safe and Secure</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location_permission_denied">Location permission denied\n</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>

    <string name="dashboard_history">Location History</string>
    <string name="dashboard_view_places">View places</string>
    <string name="dashboard_manage_places">Manage places</string>
    <string name="dashboard_manage_seniors">Manage seniors</string>
    <string name="dashboard_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="title_history">Location History</string>
    <string name="title_manage_places">Manage places</string>
    <string name="title_view_places">View places</string>
    <string name="title_manage_seniors">Manage seniors</string>
    <string name="login_title">Welcome to SeniorTracker</string>
    <string name="login_subtitle">Login or sign up</string>
    <string name="email_placeholder">Email</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="password_placeholder">Password</string>
    <string name="login">Login</string>
    <string name="notice">By creating an account you are agreeing to the Terms of Use and Privacy Policy of SeniorTracker</string>
    <string name="retype_password_placeholder">Re-type password</string>
    <string name="signup">Sign up</string>
    <string name="has_account">Already have an account?</string>
    <string name="first_time">First time here?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number_placeholder">Phone number</string>
    <string name="email">Email</string>
    <string name="create_account">Activate account</string>
    <string name="save_changes">Save changes</string>
    <string name="account_prompt">Fill the fields below to activate account</string>
    <string name="supervisor">Supervisor</string>
    <string name="senior">Senior</string>
    <string name="account_type">Choose your account type</string>
    <string name="title_maps">Maps</string>
    <string name="empty_fields">You have some empty fields</string>
    <string name="login_failed">Login failed</string>
    <string name="user_not_found">User not found</string>
    <string name="title_add_senior">Add senior</string>
    <string name="title_edit_senior">Edit senior</string>
    <string name="my_seniors">My Seniors</string>

    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="greek">Greek</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="notifications_title">Notifications</string>
    <string name="settings_title">Settings</string>
    <string name="my_account_title">My Account</string>
    <string name="manage_seniors_title">Manage Seniors</string>
    <string name="add_senior_title">Add Senior</string>
    <string name="edit_senior_title">Edit Senior</string>
    <string name="location_history_title">Location History</string>
    <string name="choose_language_title">Choose Language</string>
    <string name="title_language">Language</string>
    <string name="title_account_settings">Account</string>
    <string name="my_geofences">My Geofences</string>
    <string name="add_senior">Add Senior</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="title_add_geofence">Add Geofence</string>
    <string name="mark_geofence">Mark Geofence</string>
    <string name="title_geofence_details">Create Geofence</string>
    <string name="location">Location Name</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="radius">Radius in meters:</string>
    <string name="create_geofence">Create Geofence</string>
    <string name="your_senior_email">Your senior email</string>
    <string name="location_hint">Type in the name of the location</string>
    <string name="geofence_email_hint">Type in your seniors email</string>
    <string name="choose_senior">Choose senior</string>
    <string name="no_notifications">There are notifications</string>
    <string name="options">Options</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="connection">Connection</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="logged_out_message">You have to Login or Sign up in order to use the app</string>
    <string name="broadcast_your_location">Broadcast your Location</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stop_broadcasting">Stop Broadcasting</string>
    <string name="your_seniors">Your Seniors</string>
    <string name="type_seniors_email_here">Type seniors email here</string>
    <string name="search">Search</string>

</resources>