<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.AccountFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fragment_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/between_edit_text_margin"
                android:text="@string/name"
                android:textSize="@dimen/edit_text_title_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:strokeColor="@color/neutral">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:enabled="true"
                    android:inputType="text"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/between_edit_text_margin"
                android:text="@string/surname"
                android:textSize="@dimen/edit_text_title_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:strokeColor="@color/neutral">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:enabled="true"
                    android:inputType="text"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/between_edit_text_margin"
                android:text="@string/phone_number_placeholder"
                android:textSize="@dimen/edit_text_title_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:strokeColor="@color/neutral">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:enabled="true"
                    android:inputType="number"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/between_edit_text_margin"
                android:text="@string/email"
                android:textSize="@dimen/edit_text_title_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:strokeColor="@color/neutral">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:enabled="true"
                    android:inputType="textWebEmailAddress|textEmailAddress"
                    android:textSize="@dimen/edit_text_text_size" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="true"
                android:text="@string/save_changes" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>